simple crud for remorques
