# app.js
@@ -3,6 +3,7 @@ const mongoose = require('mongoose')
 const userRouter = require("./src/routes/user.route")
 const camionRouter = require("./src/routes/camion.route")
 const tireRouter = require("./src/routes/tire.route")
+const remorqueRouter = require("./src/routes/remorque.route")
 // const path = require("path")
 const auth_router = require("./src/routes/auth.router")
 const cookieParser = require("cookie-parser")
@@ -40,6 +41,7 @@ app.use("/auth", auth_router)
 app.use("/api", userRouter)
 app.use("/camion", camionRouter)
 app.use("/tires", tireRouter)
+app.use("/remorques", remorqueRouter)
 
 //TODO: ERROR HANDLAING
 //TODO:SWAGGER:
